updating research page

--- a/research.html
+++ b/research.html
@@ -114,22 +114,49 @@
 
         <section id="publications" class="#publications">
           <h2 style="margin-left:35px;"><u>Publications</u></h2>
+          <p style="margin-left:35px;">See <a href="https://scholar.google.com/citations?user=krfsglIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar">Google Scholar</a> for an up to date list! *Denotes equal contribution.</p>
           <br>
           <ul style="list-style-type:none; margin-top: 20px;">
             <li>
               <div class="row">
-                <div class="col-sm-3 text-left"> 
-                  <img src="assets/img/publications/architecture_agnostic_neural_networks_img.png" alt="Sabera Talukder Architecture Agnostic Neural Networks Neurips 2020" style="max-width:100%; max-height:100%; border-radius: 10%;">
-                </div>
+                  <div class="col-sm-3 text-left"> 
+                    <img src="assets/img/publications/Generalizability_under_sensor_failure_tokenization_+_transformers_enable_more_robust_latent_spaces.png" alt="Sabera Talukder Generalizability Tokenization + Transformers Robust Latent Spaces COSYNE 2024" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                  </div>
 
-                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
-                  <h4><a href="https://arxiv.org/pdf/2011.02712.pdf" target="_blank"> Architecture Agnostic Neural Networks</a></h4>
-                  <b>Sabera Talukder*</b>, Guruprasad Raghavan*, Yisong Yue
+                  <div class="col-sm-8 text-left" style="font-size:18px">
+                  <h4><a href="" target="_blank"> Generalizability Under Sensor Failure: Tokenization + Transformers Enable More Robust Latent Spaces </a></h4>
+                  Geeling Chau*, Yujin An*, Ahamed Raffey Iqbal*, Soon-Jo Chung, Yisong Yue, <b>Sabera Talukder</b>
                   <br>
-                  Workshop Oral, <b>Neurips 2020</b>
+                  <b>COSYNE 2024</b>
+                  </div>
+              </div>
+              <br> <br>
+            </li>
+            <li>
+              <div class="row">
+                  <div class="col-sm-3 text-left"> 
+                    <img src="assets/img/publications/TOTEM_Tokenized_Time_Series_Embeddings_for_General_Time_Series_Analysis_sabera_talukder.png" alt="Sabera Talukder TOTEM Tokenized Time Series Embeddings for General Time Series Analysis" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                  </div>
+
+                  <div class="col-sm-8 text-left" style="font-size:18px">
+                  <h4><a href="https://arxiv.org/pdf/2402.16412.pdf" target="_blank"> <b>TOTEM</b>: <b><u>TO</u></b>kenized <b><u>T</u></b>ime Series <b><u>EM</u></b>beddings for General Time Series Analysis</a></h4>
+                  <b>Sabera Talukder</b>, Yisong Yue, Georgia Gkioxari
+                  </div>
+              </div>
+              <br> <br>
+            </li>
+            <li>
+              <div class="row">
+                  <div class="col-sm-3 text-left"> 
+                    <img src="assets/img/publications/deep_neural_imputation_sabera_talukder.png" alt="Sabera Talukder Deep Neural Imputation COSYNE 2023 Neurips 2022" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                  </div>
+
+                  <div class="col-sm-8 text-left" style="font-size:18px">
+                  <h4><a href="https://arxiv.org/pdf/2206.08094.pdf" target="_blank"> Deep Neural Imputation: A Framework for Recovering Incomplete Brain Recordings</a></h4>
+                  <b>Sabera Talukder*</b>, Jennifer Sun*, Matthew Leonard, Bing Brunton, Yisong Yue
                   <br>
-                  [<a href="https://slideslive.com/38941256/architecture-agnostic-neural-networks" target="_blank">15 minute video</a>]
-                </div>
+                  <b>COSYNE 2023</b> | Workshop, <b>Neurips 2022</b>
+                  </div>
               </div>
               <br> <br>
             </li>
@@ -145,6 +172,23 @@
                   <br>
                   Workshop, <b>Neurips 2020</b>
                   </div>
+              </div>
+              <br> <br>
+            </li>
+            <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="assets/img/publications/architecture_agnostic_neural_networks_img.png" alt="Sabera Talukder Architecture Agnostic Neural Networks Neurips 2020" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="https://arxiv.org/pdf/2011.02712.pdf" target="_blank"> Architecture Agnostic Neural Networks</a></h4>
+                  <b>Sabera Talukder*</b>, Guruprasad Raghavan*, Yisong Yue
+                  <br>
+                  Workshop Oral, <b>Neurips 2020</b>
+                  <br>
+                  [<a href="https://slideslive.com/38941256/architecture-agnostic-neural-networks" target="_blank">15 minute video</a>]
+                </div>
               </div>
               <br> <br>
             </li>
