iclr 2024 blog post

--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/SaberaTalukder" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:sabera.j.talukder@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
-          <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
+          <a href="https://scholar.google.com/citations?user=krfsglIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
           <a href="Sabera_Talukder_Resume_For_Website_2022.pdf" target="_blank" class="resume"><i class="bx bx-file-blank"></i></a>
           <a href="https://www.linkedin.com/in/sabera-talukder-69600bb1/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -118,6 +118,25 @@
           <hr style="width:90%; height:4px; margin-left:32px;">
           <br>
           <ul style="list-style-type:none; margin-top: 20px;">
+
+          <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="assets/img/blog_imgs/iclr_2024/iclr_2024_header.jpg" alt="Sabera Talukder ICLR 2024" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="iclr_2024_international_conference_on_learning_representations.html" target="_blank" alight="left" style="color:black;"><b>ICLR 2024 Reflections</b></a><a style="font-size:16px;"> | May 2024</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b style="color:white;">AI</b></button>
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600;"><b style="color:white;">Tech</b></button>
+                  </div>
+                  <br>
+                  ICLR 2024 was a whirlwind filled with tons of exhilarating science and engineering! Here, we will discuss some of my post-conference reflections about the field of machine learning...
+                </div>
+              </div>
+              <br> <br>
+            </li>
 
           <li>
               <div class="row">
