updating iclr 2024 twitter card

--- a/iclr_2024_international_conference_on_learning_representations.html
+++ b/iclr_2024_international_conference_on_learning_representations.html
@@ -16,9 +16,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
-    <meta name="twitter:title" content="Trends | Cosyne 2023">
+    <meta name="twitter:title" content="ICLR 2024 Reflections">
     <meta name="twitter:description" content="...">
-    <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/cosyne_2023/trends_pics/trends_base.jpeg">
+    <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/iclr_2024/iclr_2024_header.jpg">
 
 
   <meta charset="utf-8">
