--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         </div>
       </div>
 
-      <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
+      <!-- <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
         <ul>
           <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
           <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li>
         </ul>
 
         <a class="twitter-timeline" data-theme="dark" style="top:5px;" data-width="300" data-height="265" href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw">Tweets by SaberaTalukder</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </nav><!-- .nav-menu -->
+      </nav><!-- .nav-menu --> -->
     </div>
 
   </header><!-- End Header -->
