--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </ul>
 
         <a class="twitter-timeline" data-theme="dark" style="top:5px;" data-width="300" data-height="265" href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw">Tweets by SaberaTalukder</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </nav><!-- .nav-menu --> -->
+      </nav><!-- .nav-menu -->
     </div>
 
   </header><!-- End Header -->
