--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
         <h1>Welcome!</h1>
         <p style="font-size: 20px;">
         <br>
-        My name is Sabera Talukder and I build time series foundation models!
+        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=OqrCpdb6MJk" target="_blank">time series foundation models</a> and novel multimodal representations!
         <br><br>
-        I am a National Science Foundation Graduate Fellow, Chen Graduate Fellow, and PhD candidate at Caltech working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a>. I am also currently serving as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee.
+        I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a PhD candidate at Caltech working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a>. I also served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee from 2023-2025.
         <br><br>
         Previously, I was a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects at Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
-        <br>
-        <br>
+        <br><br>
+        I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even implementing the former in daycares for homeless children in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
+        <br><br>
         Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
       </div>
       <div class="col-lg-5" style="margin-left: -15px;">
