--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <br>
         My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=OqrCpdb6MJk" target="_blank">time series foundation models</a> and novel multimodal representations!
         <br><br>
-        I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a PhD candidate at Caltech working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a>. I also served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee from 2023-2025.
+        I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor). I also served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee from 2023-2025.
         <br><br>
         Previously, I was a machine learning research intern at Google Research where I scaled time series foundation models, and a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects at Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
