--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img src="assets/img/sabera_talukder_headshot_2021_square_blue.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" class="img-fluid rounded-circle" style="width:auto; height:200px;">
         <h1 class="text-light"><a href="index.html">Sabera Talukder</a></h1>
         <div class="social-links mt-3 text-center">
-         <p style="color:white;"><span class="typed" data-typed-items="Neuroengineer, Creator, Researcher"></span></p>
+         <p style="color:white;"><span class="typed" data-typed-items="Scientist, Engineer, Researcher"></span></p>
         </div>
 
         <div class="social-links mt-3 text-center">
@@ -92,7 +92,7 @@
         <h1>Welcome!</h1>
         <p style="font-size: 20px;">
         <br>
-        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=OqrCpdb6MJk" target="_blank">time series foundation models</a> and novel multimodal representations!
+        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations!
         <br><br>
         I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor). I also served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee from 2023-2025.
         <br><br>
