--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <br><br>
         I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor). I also served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee from 2023-2025.
         <br><br>
-        Previously, I was a machine learning research intern at Google Research where I scaled time series foundation models, and a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects at Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
+        Previously, I was a machine learning research intern at Google Research where I scaled time series foundation models, and a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects between Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
-        I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even implementing the former in daycares for homeless children in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
+        I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even implementing the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
         <br><br>
         Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
       </div>
