--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
         <h1>Welcome!</h1>
         <p style="font-size: 20px;">
         <br>
-        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations!
+        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations! I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor).
         <br><br>
-        I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor). I also served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee from 2023-2025.
-        <br><br>
-        Previously, I was a machine learning research intern at Google Research where I scaled time series foundation models, and a software engineer at the Chan Zuckerberg Biohub where I created interdisciplinary ML + Neuro projects between Stanford, Berkeley & UCSF. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
+        Previously, I served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee, scaled time series foundation models as a machine learning research intern at Google Research, and created interdisciplinary ML + Neuro projects between Stanford, Berkeley & UCSF as a software engineer at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
         I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even implementing the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
         <br><br>
