--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <br><br>
         Previously, I served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee, scaled time series foundation models as a machine learning research intern at Google Research, and created interdisciplinary ML + Neuro projects between Stanford, Berkeley & UCSF as a software engineer at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
-        I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even implementing the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
+        I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even deploying the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
         <br><br>
         Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
       </div>
