--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/SaberaTalukder" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="mailto:sabera.j.talukder@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
-          <!-- <a href="https://scholar.google.com/citations?user=krfsglIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
-          <a href="Sabera_Talukder_Resume_For_Website_2022.pdf" target="_blank" class="resume"><i class="bx bx-file-blank"></i></a> -->
+          <a href="https://scholar.google.com/citations?user=krfsglIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
+          <!-- <a href="Sabera_Talukder_Resume_For_Website_2022.pdf" target="_blank" class="resume"><i class="bx bx-file-blank"></i></a> -->
           <a href="https://www.linkedin.com/in/sabera-talukder-69600bb1/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -75,8 +75,18 @@
           <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
           <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li>
         </ul>
-
+      
         <a class="twitter-timeline" data-theme="dark" style="top:5px;" data-width="300" data-height="265" href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw">Tweets by SaberaTalukder</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </nav><!-- .nav-menu -->
+
+
+      <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
+        <ul>
+          <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
+          <!-- <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li> -->
+        </ul>
+      
+        <!-- <a class="twitter-timeline" data-theme="dark" style="top:5px;" data-width="300" data-height="265" href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw">Tweets by SaberaTalukder</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
       </nav><!-- .nav-menu -->
     </div>
 
@@ -93,12 +103,40 @@
         <p style="font-size: 20px;">
         <br>
         My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations! I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor).
+
         <br><br>
-        Previously, I served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee, scaled time series foundation models as a machine learning research intern at Google Research, and created interdisciplinary ML + Neuro projects between Stanford, Berkeley & UCSF as a software engineer at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
+        Previously, I scaled time series foundation models at Google Research; served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee; and created interdisciplinary ML + Neuro projects at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
-        I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even deploying the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
-        <br><br>
+<!--         I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even deploying the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
+        <br><br> -->
         Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
+
+
+
+        <style>
+          .video {
+            max-width: 800px;      /* optional */
+            margin: 1rem auto;     /* optional */
+          }
+          .video iframe {
+            width: 100%;
+            aspect-ratio: 16 / 9;
+            height: auto;
+            display: block;
+          }
+        </style>
+
+        <div class="video">
+          <iframe
+            src="https://www.youtube.com/watch?v=AH2_Aq9_4R8&t=96s"
+            title="YouTube video"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+
+
       </div>
       <div class="col-lg-5" style="margin-left: -15px;">
         <img src="assets/img/Sabera_Talukder_chen_institute_caltech_long.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
