--- a/index.html
+++ b/index.html
@@ -102,38 +102,27 @@
         <h1>Welcome!</h1>
         <p style="font-size: 20px;">
         <br>
-        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations! I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor).
+        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations! I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor). Check out some of my work below.
 
-        <br><br>
+        <br>
+
+        <div class="video">
+          <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/AH2_Aq9_4R8\&t=96s"
+            title="Sabera Talukder TOTEM - Tokenized Time Series Embeddings" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+        <p style="font-size: 20px;">
+        <br>
         Previously, I scaled time series foundation models at Google Research; served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee; and created interdisciplinary ML + Neuro projects at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
 <!--         I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even deploying the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
         <br><br> -->
         Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
-
-
-
-        <style>
-          .video {
-            max-width: 800px;      /* optional */
-            margin: 1rem auto;     /* optional */
-          }
-          .video iframe {
-            width: 100%;
-            aspect-ratio: 16 / 9;
-            height: auto;
-            display: block;
-          }
-        </style>
-
-        <div class="video">
-          <iframe
-            src="https://www.youtube.com/watch?v=AH2_Aq9_4R8&t=96s"
-            title="YouTube video"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </div>
 
 
 
