--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
         <ul>
           <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
+          <li><a href="past_lives.html"><i class="bx bxs-calendar"></i> <span>Past Lives</span></a></li>
           <!-- <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li> -->
         </ul>
       
@@ -102,7 +103,7 @@
         <h1>Welcome!</h1>
         <p style="font-size: 20px;">
         <br>
-        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> and novel multimodal representations! I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor). Check out some of my work below.
+        My name is Sabera Talukder and I build <a href="https://www.youtube.com/watch?v=AH2_Aq9_4R8" target="_blank">time series foundation models</a> (checkout the video below) and novel multimodal representations! I am a National Science Foundation, Chen, and PIMCO Graduate Fellow as well as a Caltech PhD candidate working with Professors <a href="https://gkioxari.github.io/" target="_blank">Georgia Gkioxari</a> and <a href="http://www.yisongyue.com/" target="_blank">Yisong Yue</a> (primary advisor).
 
         <br>
 
