--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
       <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
         <ul>
+          <li><a href="index.html"><i class="bx bxs-home"></i> <span>Home</span></a></li>
           <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
           <li><a href="past_lives.html"><i class="bx bxs-calendar"></i> <span>Past Lives</span></a></li>
           <!-- <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li> -->
@@ -119,7 +120,7 @@
 
         <p style="font-size: 20px;">
         <br>
-        Previously, I scaled time series foundation models at Google Research; served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Oraganizing Committee; and created interdisciplinary ML + Neuro projects at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
+        Previously, I scaled time series foundation models at Google Research; served as a Chair on the <a href="https://www.cosyne.org/" target="_blank">COSYNE</a> Organizing Committee; and created interdisciplinary ML + Neuro projects at the Chan Zuckerberg Biohub. Before that, I double majored at Stanford with honors in both electrical engineering and biochemistry.
         <br><br>
 <!--         I've led many past lives from being a competitive synchronized swimmer (National Gold Medal, National Silver Medal, California State Games Gold Medal) to designing low-cost water and air purification systems and even deploying the former in Bangladesh (Google Science Fair Finalist, Scientific American Science in Action Finalist).
         <br><br> -->
