--- a/research.html
+++ b/research.html
@@ -82,6 +82,7 @@
 
       <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
         <ul>
+          <li><a href="index.html"><i class="bx bxs-home"></i> <span>Home</span></a></li>
           <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
           <li><a href="past_lives.html"><i class="bx bxs-calendar"></i> <span>Past Lives</span></a></li>
           <!-- <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li> -->
